--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@langchain/textsplitters": "^1.0.1",
+    "@xenova/transformers": "^2.17.2",
     "baseline-browser-mapping": "^2.8.32",
     "chromadb-client": "^2.4.6",
     "ioredis": "^5.8.2",
